# cosmic-python-architecture

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  batch.py  docker-compose.yml  order_line.py  orm.py  pyproject.toml  readme.md  repository.py  services.py  settings.py  test_batches.py  test_orm.py
aggregates/: product.py
alembic/: README  env.py
alembic/versions/: 1266cd5fd42a_create_customer_add_foreign_key.py  64dc4f62bc00_merge_head.py  786a7744b2fe_create_batch_table.py  9364209de6b7_initial_commit.py  a3c55bc47f7d_changed_foreign_key_references.py  e54ce7b74b03_update.py
copy/: sync.py  test_sync.py
domain/aggregates/: __init__.py  base.py  product.py
domain/events/: __init__.py  events.py
domain/models/: __init__.py  base.py  batch.py  order_line.py
flask_api/: app.py  settings.py
infrastructure/: __init__.py  orm.py  playground.ipynb  repository.py
models/: __init__.py  batch.py  order_line.py
services/: __init__.py  message_bus.py  services.py  unit_of_work.py
tests/: common.py  conftest.py  test_batches.py  test_flask_api.py  test_orm.py  test_repository.py  test_service.py
tests/e2e/: test_flask_api.py
tests/integration/: test_orm.py  test_repository.py  test_unit_of_work.py
tests/unit/: test_batches.py  test_products.py  test_services.py
