[tool.poetry]
name = "architecture_patterns_tdd_ddd"
version = "0.1.0"
description = "Implementation of the DDD book over at cosmic python https://www.cosmicpython.com/book/preface.html"
authors = ["Jonathan II Tabac <j.tabacii@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "domain"}, {include = "infrastructure"}, {include = "flask_api"}, {include = "services"}]

[tool.poetry.scripts]
app = "flask_api.app:start"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
flask = "^2.2.2"
requests = "^2.28.1"
sqlalchemy-serializer = "^1.4.1"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
alembic = "^1.12.1"
ptpython = "^3.0.23"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    {DB_USERNAME="docker"},
    {DB_PASSWORD="docker"},
    {DB_HOST="localhost"},
    {DB_PORT="5436"},
    {DB_NAME="cosmic_python_db_test"}
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401", "E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

preview = false
